#4 Основное окно приложения - Попытка исправить сборку через открытие пакета com.sun.glass.utils