@@ -196,6 +196,7 @@
                     <argLine>
                         --add-exports javafx.graphics/com.sun.javafx.application=ALL-UNNAMED
                         --add-exports javafx.graphics/com.sun.glass.ui=ALL-UNNAMED
+                        --add-exports javafx.graphics/com.sun.glass.utils=ALL-UNNAMED
                         ${openjfx.run.args}
                     </argLine>
                 </configuration>
